--- a/src/style.css
+++ b/src/style.css
@@ -304,7 +304,7 @@ height: 45px;
   right: 0;
   width: 100%;
   height: 300px;
-  background: #000;
+  background: #fff;
   padding: 20px 25px;
   z-index: 5;
   margin: 0 auto;
